--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,16 @@
 # NOTE: This is an example env file
 # Copy this file into the same directory and rename it to .env, then add in secrets
 
-YOUR_SECRET = ""
+EXAMPLE_SPRING_SERVICE_URL =
+EXAMPLE_FLASK_SERVICE_URL =
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_PORT=
+
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_COGNITO_USER_POOL_ID=
+AWS_COGNITO_APP_CLIENT_ID=
