IS2-21 Work on user management service + frontend auth flow

--- a/.example.env
+++ b/.example.env
@@ -14,3 +14,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_COGNITO_USER_POOL_ID=
 AWS_COGNITO_APP_CLIENT_ID=
+
+# Frontend secrets:
+GOOGLE_MAPS_API_KEY=
+AUTH_SECRET=
+USER_MANAGEMENT_SERVICE_API_BASE_URL=
