--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: frontend
     ports:
       - "3000:3000" # Expose the Next.js frontend on localhost:3000
+    env_file:
+      - .env
     environment:
       NODE_ENV: "development"
       NEXT_PUBLIC_USER_POOL_ID: ${AWS_COGNITO_USER_POOL_ID}
