--- a/services/ticketManagementService/requirements.txt
+++ b/services/ticketManagementService/requirements.txt
@@ -4,6 +4,7 @@ anyio==4.8.0
 asyncpg==0.30.0
 click==8.1.8
 colorama==0.4.6
+cryptography>=41.0.0
 fastapi==0.115.11
 greenlet==3.1.1
 h11==0.14.0
@@ -14,6 +15,8 @@ psycopg2==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dotenv==1.0.1
+python-jose[cryptography]>=3.3.0
+requests>=2.26.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.46.0
