--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@aws-amplify/adapter-nextjs": "^1.5.2",
     "@aws-amplify/core": "^6.10.4",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
