--- a/services/BillingService/Dockerfile
+++ b/services/BillingService/Dockerfile
@@ -4,6 +4,12 @@ FROM python:3.11-slim
 # Set the working directory
 WORKDIR /app
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    FLASK_APP=app.py \
+    FLASK_ENV=production
+
 # Copy the dependencies file and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
@@ -11,8 +17,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the project files into the Docker image
 COPY . .
 
+# Create non-root user for security
+RUN adduser --disabled-password --gecos "" appuser
+USER appuser
+
 # Expose port 5001 so the service is accessible
 EXPOSE 5001
 
-## Command to run the Flask app
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5001"]
+# Run the application with Gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:5001", "app:app"]
