IS2-34 Create Event Composite service - created separate dbs - fixed some stuff in events

--- a/services/createEventService/Dockerfile
+++ b/services/createEventService/Dockerfile
@@ -1,26 +1,39 @@
-# Build stage
-FROM jelastic/maven:3.9.5-openjdk-21 AS build
+# Stage 1: Build the application using Maven with JDK 17
+FROM maven:3.9.2-eclipse-temurin-17 AS builder
 WORKDIR /app
 
-# Copy only the pom file to leverage Docker cache
+# Copy pom.xml and source code
 COPY pom.xml .
-# Resolve dependencies in batch mode and with parallel build
-RUN mvn dependency:go-offline -B -T 1C
+# Download dependencies (this layer is cached if pom.xml is unchanged)
+RUN mvn dependency:go-offline
 
-# Copy source code and build in batch mode with parallel builds
+# Copy the rest of the source code
 COPY src ./src
-RUN mvn package -DskipTests -B -T 1C
 
-# Runtime stage
-FROM amazoncorretto:21.0.4-alpine3.18
+# Build the application (skip tests for faster build if desired)
+RUN mvn clean package -DskipTests
+
+# Stage 2: Create the runtime image
+FROM eclipse-temurin:21-jre-alpine
+
+# Set JAVA_HOME and update PATH
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH="$PATH:$JAVA_HOME/bin"
+
+# Create an application directory and add a non-root user 'app'
+RUN mkdir /app && \
+    addgroup --system app && \
+    adduser -S -s /bin/false -G app app
+
 WORKDIR /app
 
-# Copy the packaged jar from the build stage
-COPY --from=build /app/target/*.jar app.jar
+# Copy the jar from the builder stage; assumes your jar is in target/ and matches *.jar
+COPY --chown=app:app --from=builder /app/target/*.jar /app/app.jar
 
-# Spring Boot reads SERVER_PORT from environment
-ENV SERVER_PORT=8070
+VOLUME /tmp
 
-EXPOSE 8070
+# Use non-root user
+USER app
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Start the application
+ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-jar", "/app/app.jar"]
