--- a/services/createEventService/pom.xml
+++ b/services/createEventService/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>IS213.G4T7</groupId>
-	<artifactId>eventManagementServiceImpl</artifactId>
+	<artifactId>eventsServiceImpl</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>createEventService</name>
 	<description>Create Event Composite Service</description>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -65,6 +65,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.2</version>
 		</dependency>
 	</dependencies>
 
