--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
+    // "@stripe/stripe-react-native": "^0.43.0",
     "@types/google.maps": "^3.58.1",
     "aws-amplify": "^6.13.2",
     "class-variance-authority": "^0.7.1",
@@ -37,7 +40,6 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
-    
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
