--- a/services/billingService/Dockerfile
+++ b/services/billingService/Dockerfile
@@ -8,12 +8,21 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     FLASK_APP=app.py \
-    FLASK_ENV=production
+    FLASK_ENV=production \
+    PYTHONPATH=/app \
+    PORT=5001 \
+    LOG_LEVEL=INFO
 
 # Required environment variables (will be overridden at runtime)
 ENV STRIPE_SECRET_KEY="" \
     STRIPE_WEBHOOK_SECRET="" \
     EVENT_SERVICE_URL="http://event-service:5000"
+
+# Install system dependencies including curl for healthcheck
+RUN apt-get update && apt-get install -y \
+    curl \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy the dependencies file and install dependencies
 COPY requirements.txt .
@@ -30,5 +39,20 @@ USER appuser
 # Expose port 5001 so the service is accessible
 EXPOSE 5001
 
-# Run the application with Gunicorn
-CMD ["gunicorn", "--bind", "0.0.0.0:5001", "app:app"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:5001/health || exit 1
+
+# Run the application with Gunicorn with improved configuration
+CMD ["gunicorn", \
+     "--bind", "0.0.0.0:5001", \
+     "--workers", "4", \
+     "--threads", "2", \
+     "--worker-class", "gthread", \
+     "--worker-tmp-dir", "/dev/shm", \
+     "--timeout", "120", \
+     "--log-level", "info", \
+     "--access-logfile", "-", \
+     "--error-logfile", "-", \
+     "--capture-output", \
+     "app:app"]
