--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,6 @@
     },
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/payment/components/checkout.tss"],
   "exclude": ["node_modules"]
 }
