--- a/services/createEventService/src/main/resources/application.properties
+++ b/services/createEventService/src/main/resources/application.properties
@@ -16,8 +16,8 @@ frontend.url=http://localhost:3000
 user-management.microservice.url=http://user-management-service:8080
 events.microservice.url=http://events-service:8001
 # TODO: to edit
-billing.microservice.url=http://localhost-changethis:8001
-notifications.microservice.url=http://someoutsystemsurl.com
+billing.microservice.url=http://billing-service:5001
+notifications.microservice.url=https://personal-lqs1mj7y.outsystemscloud.com/notificationService/rest/confirmation/others
 
 #frontend.url=http://localhost:3000
 #user-management.microservice.url=http://localhost:8080
