--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,95 @@ services:
       retries: 10
     networks:
       - default
+    container_name: kong-db
+    environment:
+      POSTGRES_DB: kong
+      POSTGRES_USER: kong
+      POSTGRES_PASSWORD: ${KONG_DB_PASSWORD}
+    volumes:
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "kong"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - default
 
+  # Kong Migration
+  kong-migration:
+    image: kong:3.5
+    command: "kong migrations bootstrap"
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-db
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: ${KONG_DB_PASSWORD}
+    depends_on:
+      kong-db:
+        condition: service_healthy
+    networks:
+      - default
+
+  # Kong Gateway
+  kong:
+    image: kong:3.5
+    container_name: kong-gateway
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-db
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: ${KONG_DB_PASSWORD}
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+      KONG_ADMIN_GUI_URL: http://localhost:8002
+      KONG_DECLARATIVE_CONFIG: /kong/declarative/jwt-plugin.yaml
+    depends_on:
+      kong-migration:
+        condition: service_completed_successfully
+    ports:
+      - "8000:8000" # Kong proxy port
+      - "8001:8001" # Kong admin API
+      - "8443:8443" # Kong proxy SSL port
+      - "8444:8444" # Kong admin SSL port
+    networks:
+      - default
+    healthcheck:
+      test: ["CMD", "kong", "health"]
+      interval: 10s
+      timeout: 10s
+      retries: 5 
+    
+  # Kong Bootstrap
+  kong-bootstrap:
+    image: curlimages/curl
+    depends_on:
+      kong:
+        condition: service_healthy
+    volumes:
+      - ./kong/config:/config
+    command: >
+      sh -c "
+        echo 'Waiting for Kong to be ready...' &&
+        sleep 10 &&
+        curl -s -X POST http://kong:8001/services -d 'name=user-management-service' -d 'url=http://user-management-service:8080' &&
+        curl -s -X POST http://kong:8001/services/user-management-service/routes -d 'paths[]=/api/users' &&
+        curl -s -X POST http://kong:8001/services -d 'name=ticket-management-service' -d 'url=http://ticket-management-service:8000' &&
+        curl -s -X POST http://kong:8001/services/ticket-management-service/routes -d 'paths[]=/api/v1/bookings' -d 'paths[]=/api/v1/tickets' &&
+        curl -s -X POST http://kong:8001/services -d 'name=events-service' -d 'url=http://events-service:8001' &&
+        curl -s -X POST http://kong:8001/services/events-service/routes -d 'paths[]=/api/v1/events' &&
+        curl -s -X POST http://kong:8001/services -d 'name=billing-service' -d 'url=http://billing-service:5001' &&
+        curl -s -X POST http://kong:8001/services/billing-service/routes -d 'paths[]=/api/refund' -d 'paths[]=/api/events' &&
+        curl -s -X POST http://kong:8001/services -d 'name=create-event-service' -d 'url=http://create-event-service:8070' &&
+        curl -s -X POST http://kong:8001/services/create-event-service/routes -d 'paths[]=/api/v1/create-event' &&
+        curl -s -X POST http://kong:8001/consumers -d 'username=frontend-app' &&
+        curl -s -X POST http://kong:8001/plugins -d 'name=cors' -d 'config.origins=http://localhost:3000' -d 'config.methods=GET,POST,PUT,DELETE,OPTIONS' -d 'config.headers=Accept,Accept-Version,Content-Length,Content-MD5,Content-Type,Date,X-Auth-Token,Authorization' -d 'config.exposed_headers=X-Auth-Token' -d 'config.credentials=true' -d 'config.max_age=3600'
+        curl -s -X POST http://kong:8001/plugins -d 'name=jwt' -d 'config.secret_is_base64=false' -d 'config.claims_to_verify=exp' -d 'config.key_claim_name=kid' -d 'config.run_on_preflight=true' -d 'config.auth_methods=header' -d 'config.header_names=Authorization'
+      "
+    networks:
+      - default 
   # Ticket Management Database
   ticket-db:
     image: postgres:16.2
@@ -362,6 +450,7 @@ volumes:
   logging-db-data:
   events-db-data:
   billing-db-data:
+  kong-db-data:
 
 networks:
   default:
