IS2-39 Set Up JWT bearer token validation for create event composite service

--- a/services/createEventService/src/main/resources/application.properties
+++ b/services/createEventService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=createEventCompositeService
 server.port=8070
 
-# TODO: change to rabbitmq.host=rabbitmq when moving to docker else use localhost
+# Change to rabbitmq.host=rabbitmq when moving to docker else use localhost
 rabbitmq.host=rabbitmq
 rabbitmq.queue=logs_queue
 rabbitmq.username=guest
@@ -17,7 +17,13 @@ user-management.microservice.url=http://user-management-service:8080
 events.microservice.url=http://events-service:8001
 # TODO: to edit
 billing.microservice.url=http://billing-service:5001
+# Using /others path
 notifications.microservice.url=https://personal-lqs1mj7y.outsystemscloud.com/notificationService/rest/confirmation/others
+
+# AWS Cognito Configuration
+aws.cognito.region=${AWS_REGION}
+aws.cognito.user-pool-id=${AWS_COGNITO_USER_POOL_ID}
+aws.cognito.app-client-id=${AWS_COGNITO_APP_CLIENT_ID}
 
 #frontend.url=http://localhost:3000
 #user-management.microservice.url=http://localhost:8080
