--- a/services/bookingService/requirements.txt
+++ b/services/bookingService/requirements.txt
@@ -1,18 +1,27 @@
 fastapi>=0.68.0
 uvicorn>=0.15.0
-pydantic>=1.8.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
 python-dotenv>=0.19.0
-httpx>=0.23.0
+httpx>=0.24.0
 sqlalchemy>=1.4.23
 psycopg2-binary>=2.9.1
 pika>=1.2.0
 stripe>=2.60.0
-python-jose>=3.3.0
+python-jose[cryptography]>=3.3.0
 passlib>=1.7.4
 bcrypt>=3.2.0
 alembic>=1.7.1
 pytest>=6.2.5
+pytest-asyncio>=0.18.0
+pytest-cov>=2.12.0
 requests>=2.26.0
 aio-pika>=8.2.0
 python-multipart>=0.0.5
 email-validator>=1.1.3
+black>=21.7b0
+flake8>=3.9.2
+openapi-schema-pydantic>=1.2.4
+prometheus-client>=0.11.0
+structlog>=21.1.0
+slowapi>=0.1.4
