--- a/services/ticketManagementService/requirements.txt
+++ b/services/ticketManagementService/requirements.txt
@@ -13,6 +13,7 @@ Mako==1.3.9
 MarkupSafe==3.0.2
 psycopg2==2.9.10
 pydantic==2.10.6
+pydantic-settings==2.2.1
 pydantic_core==2.27.2
 python-dotenv==1.0.1
 python-jose[cryptography]>=3.3.0
@@ -22,3 +23,4 @@ SQLAlchemy==2.0.38
 starlette==0.46.0
 typing_extensions==4.12.2
 uvicorn==0.34.0
+aio-pika==9.4.1
