fixed cors error

--- a/kong/config/cors-plugin.yaml
+++ b/kong/config/cors-plugin.yaml
@@ -12,6 +12,7 @@ plugins:
         - PUT
         - DELETE
         - OPTIONS
+        - PATCH
       headers:
         - Accept
         - Accept-Version
